--- a/pricing.html
+++ b/pricing.html
@@ -18,6 +18,15 @@
     <!-- Navigation -->
     <nav class="nav nav-light">
       <div class="nav-container">
+        <div class="nav-logo">
+          <a href="index.html">
+            <img
+              src="./assets/images/nordhealth-nora-light.svg"
+              alt="Nordhealth Nora"
+              class="logo-img"
+            />
+          </a>
+        </div>
         <div class="nav-actions">
           <a href="pricing.html" class="nav-link active">Pricing</a>
           <button class="btn-secondary">
