--- a/pricing.html
+++ b/pricing.html
@@ -199,44 +199,56 @@
 -->
 
     <!-- Footer -->
-    <footer class="footer" id="footer" style="background-color: rgb(12, 26, 61); padding: 96px 142px 48px; min-height: auto;">
-        <div style="max-width: 1156px; margin: 0 auto; display: flex; flex-direction: column; align-items: center;">
+    <footer class="footer nora-footer" id="footer">
+        <div class="nora-footer-container">
 
           <!-- Stats Section -->
-          <div style="width: 100%; margin-bottom: 80px;">
-            <h2 style="color: #fff; font-size: 32px; font-weight: 600; text-align: center; margin: 0 0 48px 0;">Pysy läsnä potilaan kanssa</h2>
-            <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 48px; text-align: center;">
-              <div>
-                <div style="color: #fff; font-size: 32px; font-weight: 600; margin-bottom: 8px;">4 h+</div>
-                <div style="color: rgba(255,255,255,0.7); font-size: 15px; font-weight: 300; line-height: 1.5;">Aikaa takaisin joka viikko</div>
+          <div class="nora-footer-stats">
+            <h2 class="nora-footer-heading">Pysy läsnä potilaan kanssa</h2>
+            <div class="nora-footer-stats-grid">
+              <div class="nora-footer-stat">
+                <div class="nora-footer-stat-value">4 h+</div>
+                <div class="nora-footer-stat-label">Aikaa takaisin joka viikko</div>
               </div>
-              <div>
-                <div style="color: #fff; font-size: 32px; font-weight: 600; margin-bottom: 8px;">8 000+</div>
-                <div style="color: rgba(255,255,255,0.7); font-size: 15px; font-weight: 300; line-height: 1.5;">Tiedostoja lisätään viikoittain Reflective Spaceen</div>
+              <div class="nora-footer-stat">
+                <div class="nora-footer-stat-value">8 000+</div>
+                <div class="nora-footer-stat-label">Tiedostoja lisätään viikoittain Reflective Spaceen</div>
               </div>
-              <div>
-                <div style="color: #fff; font-size: 32px; font-weight: 600; margin-bottom: 8px;">Muistiinpanojen laatu</div>
-                <div style="color: rgba(255,255,255,0.7); font-size: 15px; font-weight: 300; line-height: 1.5;">Nordhealth Nora -käyttäjien eniten arvostama</div>
+              <div class="nora-footer-stat">
+                <div class="nora-footer-stat-value">Muistiinpanojen laatu</div>
+                <div class="nora-footer-stat-label">Nordhealth Nora -käyttäjien eniten arvostama</div>
               </div>
             </div>
           </div>
 
           <!-- Divider -->
-          <div style="width: 100%; height: 1px; background: rgba(255,255,255,0.12); margin-bottom: 48px;"></div>
+          <div class="nora-footer-divider"></div>
 
           <!-- Logo & Links -->
-          <div style="width: 100%; display: flex; justify-content: space-between; align-items: center;">
-            <a href="index.html">
-              <img src="./assets/images/nordhealth-nora-white.svg" alt="Nordhealth Nora" style="height: 32px; width: auto;">
+          <div class="nora-footer-bottom">
+            <a href="index.html" class="nora-footer-logo-link">
+              <img src="./assets/images/nordhealth-nora-white.svg" alt="Nordhealth Nora" class="nora-footer-logo">
             </a>
-            <div style="display: flex; align-items: center; gap: 24px;">
-              <span style="color: rgba(255,255,255,0.6); font-size: 14px; font-weight: 300;">© 2026 Nordhealth</span>
-              <a href="privacy.html" style="color: rgba(255,255,255,0.6); font-size: 14px; font-weight: 300; text-decoration: none;">Tietosuoja</a>
-              <a href="#" style="color: rgba(255,255,255,0.6); font-size: 14px; font-weight: 300; text-decoration: none;">Käyttöehdot</a>
+            <div class="nora-footer-links">
+              <span class="nora-footer-copyright">© 2026 Nordhealth</span>
+              <a href="privacy.html" class="nora-footer-link">Tietosuoja</a>
+              <a href="#" class="nora-footer-link">Käyttöehdot</a>
             </div>
           </div>
 
         </div>
     </footer>
+
+    <!-- Demo Modal -->
+    <div class="modal-overlay" id="demoModal">
+      <div class="modal-content">
+        <button class="modal-close" aria-label="Close modal">&times;</button>
+        <div class="modal-body">
+          <div class="hs-form-frame" data-region="eu1" data-form-id="6761c43d-aef8-4c85-8d6c-7ed90a1ac8c5" data-portal-id="144062425"></div>
+        </div>
+      </div>
+    </div>
+
+    <script src="src/js/main.js"></script>
   </body>
 </html>
