Add demo modal trigger to third pricing card button

--- a/pricing.html
+++ b/pricing.html
@@ -90,7 +90,7 @@
           <div class="pricing-card-info">
             <p>Ota yhteyttä keskustellaksesi räätälöidystä hinnoittelusta</p>
           </div>
-          <button class="btn-card-cta">Ota yhteyttä myyntiin</button>
+          <button class="btn-card-cta btn-demo-trigger">Ota yhteyttä myyntiin</button>
         </div>
       </div>
     </section>
